Add 'WithoutGeometryChange' variants of paint invalidation flag setters

Add a flag needsPaintOffsetAndVisualRectUpdate() to indicate that the
object needs paint offset and visual rect update during
PrePaintTreeWalk.

The original paint invalidation flag setters setMayNeedPaintInvalidation,
setShouldDoFullPaintInvalidaiton and setters calling the two will set
the new flag besides the original flags.

Add 'WithoutGeometryChange' variants of the two setters to allow
PrePaintTreeWalk to skip paint offset and visual rect update (to be
implemented in later CLs).

BUG=697081,685179

Review-Url: https://codereview.chromium.org/2751383003
Cr-Commit-Position: refs/heads/master@{#457809}