third_party/WebKit/Source/core/layout/LayoutObject.cpp
@@ -1625,6 +1625,7 @@ void LayoutObject::markAncestorsForOverflowRecalcIfNeeded() {
 void LayoutObject::setNeedsOverflowRecalcAfterStyleChange() {
   bool neededRecalc = needsOverflowRecalcAfterStyleChange();
   setSelfNeedsOverflowRecalcAfterStyleChange();
+  setNeedsPaintOffsetAndVisualRectUpdate();
   if (!neededRecalc)
     markAncestorsForOverflowRecalcIfNeeded();
 }
@@ -1724,11 +1725,17 @@ void LayoutObject::setStyle(PassRefPtr<ComputedStyle> style) {
   }
 
   if (diff.needsPaintInvalidationSubtree() ||
-      updatedDiff.needsPaintInvalidationSubtree())
+      updatedDiff.needsPaintInvalidationSubtree()) {
     setShouldDoFullPaintInvalidationIncludingNonCompositingDescendants();
-  else if (diff.needsPaintInvalidationObject() ||
-           updatedDiff.needsPaintInvalidationObject())
-    setShouldDoFullPaintInvalidation();
+  } else if (diff.needsPaintInvalidationObject() ||
+             updatedDiff.needsPaintInvalidationObject()) {
+    // TODO(wangxianzhu): For now LayoutSVGRoot::localVisualRect() depends on
+    // several styles. Refactor to avoid this special case.
+    if (isSVGRoot())
+      setShouldDoFullPaintInvalidation();
+    else
+      setShouldDoFullPaintInvalidationWithoutGeometryChange();
+  }
 
   // Text nodes share style with their parents but the paint properties don't
   // apply to them, hence the !isText() check.
@@ -3410,14 +3417,24 @@ inline void LayoutObject::markAncestorsForPaintInvalidation() {
   for (LayoutObject* parent = this->paintInvalidationParent();
        parent && !parent->shouldCheckForPaintInvalidation();
        parent = parent->paintInvalidationParent())
-    parent->m_bitfields.setChildShouldCheckForPaintInvalidation(true);
+    parent->m_bitfields.setMayNeedPaintInvalidation(true);
+}
+
+inline void LayoutObject::setNeedsPaintOffsetAndVisualRectUpdate() {
+  if (needsPaintOffsetAndVisualRectUpdate())
+    return;
+  m_bitfields.setNeedsPaintOffsetAndVisualRectUpdate(true);
+  for (LayoutObject* parent = paintInvalidationParent();
+       parent && !parent->needsPaintOffsetAndVisualRectUpdate();
+       parent = parent->paintInvalidationParent())
+    parent->m_bitfields.setNeedsPaintOffsetAndVisualRectUpdate(true);
 }
 
 void LayoutObject::setShouldInvalidateSelection() {
   if (!canUpdateSelectionOnRootLineBoxes())
     return;
   m_bitfields.setShouldInvalidateSelection(true);
-  markAncestorsForPaintInvalidation();
+  setMayNeedPaintInvalidation();
   frameView()->scheduleVisualUpdateForPaintInvalidationIfNeeded();
 }
 
@@ -3429,8 +3446,14 @@ bool LayoutObject::shouldCheckForPaintInvalidationWithPaintInvalidationState(
 
 void LayoutObject::setShouldDoFullPaintInvalidation(
     PaintInvalidationReason reason) {
+  setNeedsPaintOffsetAndVisualRectUpdate();
+  setShouldDoFullPaintInvalidationWithoutGeometryChange(reason);
+}
+
+void LayoutObject::setShouldDoFullPaintInvalidationWithoutGeometryChange(
+    PaintInvalidationReason reason) {
   // Only full invalidation reasons are allowed.
-  ASSERT(isFullPaintInvalidationReason(reason));
+  DCHECK(isFullPaintInvalidationReason(reason));
 
   bool isUpgradingDelayedFullToFull =
       m_bitfields.fullPaintInvalidationReason() ==
@@ -3451,6 +3474,11 @@ void LayoutObject::setShouldDoFullPaintInvalidation(
 }
 
 void LayoutObject::setMayNeedPaintInvalidation() {
+  setNeedsPaintOffsetAndVisualRectUpdate();
+  setMayNeedPaintInvalidationWithoutGeometryChange();
+}
+
+void LayoutObject::setMayNeedPaintInvalidationWithoutGeometryChange() {
   if (mayNeedPaintInvalidation())
     return;
   m_bitfields.setMayNeedPaintInvalidation(true);
@@ -3469,7 +3497,7 @@ void LayoutObject::setMayNeedPaintInvalidationAnimatedBackgroundImage() {
   if (mayNeedPaintInvalidationAnimatedBackgroundImage())
     return;
   m_bitfields.setMayNeedPaintInvalidationAnimatedBackgroundImage(true);
-  setMayNeedPaintInvalidation();
+  setMayNeedPaintInvalidationWithoutGeometryChange();
 }
 
 void LayoutObject::clearPaintInvalidationFlags() {
@@ -3479,10 +3507,10 @@ void LayoutObject::clearPaintInvalidationFlags() {
   DCHECK(!shouldCheckForPaintInvalidation() || paintInvalidationStateIsDirty());
 #endif
   clearShouldDoFullPaintInvalidation();
-  m_bitfields.setChildShouldCheckForPaintInvalidation(false);
   m_bitfields.setMayNeedPaintInvalidation(false);
   m_bitfields.setMayNeedPaintInvalidationSubtree(false);
   m_bitfields.setMayNeedPaintInvalidationAnimatedBackgroundImage(false);
+  m_bitfields.setNeedsPaintOffsetAndVisualRectUpdate(false);
   m_bitfields.setShouldInvalidateSelection(false);
   m_bitfields.setBackgroundChangedSinceLastPaintInvalidation(false);
 }
